<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/information_dialog_background"
    android:orientation="vertical">

    <com.zenlabs.sevenminuteworkout.utils.FontTextView
        android:id="@+id/informatioPopUpTitleTextVIew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:text="@string/question_quit_workout"
        android:padding="@dimen/information_dialog_paddings"
        android:textSize="@dimen/action_bar_text_size"
        font:customFont="SohoGothicPro-Bold.otf" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/black"/>


    <com.zenlabs.sevenminuteworkout.utils.FontButton
        android:id="@+id/informatioPopUpFirstButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:text="@string/yes_sure"
        android:padding="@dimen/information_dialog_paddings"
        android:textColor="@color/blue_information_popup_text_color"
        android:textSize="@dimen/information_dialog_button_text_size"
        font:customFont="SohoGothicPro-Regular.otf" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/black"/>

    <com.zenlabs.sevenminuteworkout.utils.FontButton
        android:id="@+id/informatioPopUpSecondButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/information_dialog_paddings"
        android:background="@android:color/transparent"
        android:singleLine="true"
        android:text="@string/no_keep_going"
        android:textColor="@color/blue_information_popup_text_color"
        android:textSize="@dimen/information_dialog_button_text_size"
        font:customFont="SohoGothicPro-Regular.otf" />

</LinearLayout>
