<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/medium_margin"
            android:layout_weight="6"
            android:orientation="vertical">

            <!-- Top lane -->

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/rate_dialog_top_lane_height"
                android:background="@color/orange" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:gravity="bottom|center_horizontal"
                android:orientation="vertical">

                <com.zenlabs.sevenminuteworkout.utils.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hope_you_enjoyed"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textSizeExtraLarge"
                    android:textStyle="bold"
                    font:customFont="SohoGothicPro-Bold.otf"/>

                <com.zenlabs.sevenminuteworkout.utils.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:text="@string/your_run"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textSizeExtraLarge"
                    android:textStyle="bold"
                    font:customFont="SohoGothicPro-Bold.otf"/>

                <!-- Rate question -->

                <com.zenlabs.sevenminuteworkout.utils.FontTextView
                    android:id="@+id/textViewRateQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:text="@string/rate_dialog_question"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textSizeMedium"
                    font:customFont="SohoGothicPro-Bold.otf"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/medium_margin"
            android:layout_weight="4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <!-- Like -->

                <ImageButton
                    android:id="@+id/buttonLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/rate_green_button_selector"
                    android:paddingBottom="@dimen/button_padding_vertical_rate_dialog"
                    android:paddingLeft="@dimen/button_padding_horizontal_rate_dialog"
                    android:paddingRight="@dimen/button_padding_horizontal_rate_dialog"
                    android:paddingTop="@dimen/button_padding_vertical_rate_dialog"
                    android:src="@drawable/icon_like" />

                <!-- Dislike -->

                <ImageButton
                    android:id="@+id/buttonDislike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rate_red_button_selector"
                    android:paddingBottom="@dimen/button_padding_vertical_rate_dialog"
                    android:paddingLeft="@dimen/button_padding_horizontal_rate_dialog"
                    android:paddingRight="@dimen/button_padding_horizontal_rate_dialog"
                    android:paddingTop="@dimen/button_padding_vertical_rate_dialog"
                    android:src="@drawable/icon_dislike" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/medium_margin"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:orientation="horizontal">

                <com.zenlabs.sevenminuteworkout.utils.FontTextView
                    android:id="@+id/textViewClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/medium_margin"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textSizeNormal" />

                <com.zenlabs.sevenminuteworkout.utils.FontTextView
                    android:id="@+id/textViewAskMeLater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/medium_margin"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textSizeNormal" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
